--- a/퍼니처랩최종/포폴/index.html
+++ b/퍼니처랩최종/포폴/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="../css/style.css" />
         <link rel="stylesheet" href="../css/스크롤페이드인.css" />
         <link rel="stylesheet" href="../css/캐러셀.css" />
-        <link rel="stylesheet" href="../css/반응형.css" />
+        <link rel="stylesheet" href="../css/media.css" />
     </head>
 
     <body>
@@ -59,7 +59,7 @@
                     <div class="mobile-header-icon">
                         <a class="mobile-header-toggleBtn" href="#">
                             <img
-                                src="../img/iconoir_menu.png"
+                                src="../img/hamburger.png"
                                 alt="hamburger"
                             />
                         </a>
@@ -216,8 +216,6 @@
                     </ul>
         
                     <div class="dots">
-                        <span class="dot"></span>
-                        <span class="dot"></span>
                         <span class="dot"></span>
                         <span class="dot"></span>
                         <span class="dot"></span>
