--- a/퍼니처랩최종/포폴/index.html
+++ b/퍼니처랩최종/포폴/index.html
@@ -123,21 +123,21 @@
                     <div class="brand-explain-content fadein fade to-bottom">
                         <div class="brand-detail-explain">
                             <h3>
-                                WHAT<br />
-                                FURNITURE LAB<br />
-                                PURSUE
+                                What <br class="aboutus-title-spacing">
+                                Furniture Lab <br class="aboutus-title-spacing">
+                                Pursue <br class="aboutus-title-spacing">
                             </h3>
                             <div class="brand-summary">
                                 <p>
-                                    퍼니처랩은 숨쉬는 자연의 재료, 원목을
+                                    퍼니처랩은 숨쉬는 자연의 재료, <br class="spacing">원목을
                                     사용합니다<br />
-                                    한국인의 주거공간에 맞는 공간의 아름다움을
+                                    한국인의 주거공간에 맞는 <br class="spacing">공간의 아름다움을
                                     추구합니다<br />
-                                    남의 눈을 의식하지 않고 합리적인 가격을
+                                    남의 눈을 의식하지 않고 <br class="spacing">합리적인 가격을
                                     책정합니다<br />
                                 </p>
                                 <p>
-                                    퍼니처랩은 공간에 자연을 더해 편안함을
+                                    퍼니처랩은 공간에 자연을 더해 <br class="spacing">편안함을
                                     만듭니다
                                 </p>
                             </div>
