캐러셀 빼고 완성

--- a/퍼니처랩최종/포폴/index.html
+++ b/퍼니처랩최종/포폴/index.html
@@ -83,8 +83,15 @@
                         <li>
                             <a href="#"> COSTOMER CENTER </a>
                         </li>
-                        <li>
-                            <a href="#"> LOGIN </a>
+                        <hr>
+                        <li class="mobile-login">
+                            <a href="#"> Login </a>
+                        </li>
+                        <li class="mobile-login">
+                            <a href="#"> Join Us </a>
+                        </li>
+                        <li class="mobile-login">
+                            <a href="#"> My Page </a>
                         </li>
                     </ul>
                 </div>
@@ -244,7 +251,7 @@
                                     25&#45;2
                                 </p>
                             </div>
-                            <div class="more-view">
+                            <div class="more-view bamgasi">
                                 <button>
                                     <a href="#"> 밤가시쇼륨 더보기 &rarr; </a>
                                 </button>
