--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="../css/reset.css" />
-        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="stylesheet" href="css/reset.css" />
+        <link rel="stylesheet" href="css/style.css" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,10 +13,10 @@
             href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="../css/style.css" />
-        <link rel="stylesheet" href="../css/스크롤페이드인.css" />
-        <link rel="stylesheet" href="../css/캐러셀.css" />
-        <link rel="stylesheet" href="../css/media.css" />
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/스크롤페이드인.css" />
+        <link rel="stylesheet" href="css/캐러셀.css" />
+        <link rel="stylesheet" href="css/media.css" />
     </head>
 
     <body>
@@ -428,12 +428,12 @@
             </footer>
         </main>
 
-        <script src="../JS/캐러셀.js"></script>
+        <script src="JS/캐러셀.js"></script>
         <script>
             const mySlider = document.querySelector(".my-slider");
             createSlider(mySlider, 4, 10, 100, true);
         </script>
-        <script src="../JS/페이드인.js"></script>
-        <script src="../JS/media_header.js"></script>
+        <script src="JS/페이드인.js"></script>
+        <script src="JS/media_header.js"></script>
     </body>
 </html>
