--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="web-header">
                 <a href="#">
                     <img
-                        src="../img/퍼니처랩로고.png"
+                        src="img/퍼니처랩로고.png"
                         alt="furniturelab-logo"
                     />
                 </a>
@@ -52,14 +52,14 @@
                 <div class="mobile-header">
                     <a href="#">
                         <img
-                            src="../img/퍼니처랩로고.png"
+                            src="img/퍼니처랩로고.png"
                             alt="furniturelab-logo"
                         />
                     </a>
                     <div class="mobile-header-icon">
                         <a class="mobile-header-toggleBtn" href="#">
                             <img
-                                src="../img/hamburger.png"
+                                src="img/hamburger.png"
                                 alt="hamburger"
                             />
                         </a>
@@ -114,7 +114,7 @@
                     </div>
                     <figure class="main-img-wrapper">
                         <img
-                            src="../img/메인사진.jpg"
+                            src="img/메인사진.jpg"
                             alt="메인이미지_가구인테리어"
                         />
                     </figure>
@@ -150,7 +150,7 @@
                             </div>
                         </div>
                         <figure>
-                            <img src="../img/최종about.png" alt="자연이미지" />
+                            <img src="img/최종about.png" alt="자연이미지" />
                         </figure>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                     <ul class="carousel">
                         <li class="carousel-item">
                             <figure class="best-seller-furniture">
-                                <img src="../img/가구1.png" alt="net_high_shelf" />
+                                <img src="img/가구1.png" alt="net_high_shelf" />
                             </figure>
                             <div class="best-seller-furniture-name">
                                 <h6>NET HIGH SHELF</h6>
@@ -177,7 +177,7 @@
                         </li>
                         <li class="carousel-item">
                             <figure class="best-seller-furniture">
-                                <img src="../img/가구7.png" alt="toast_wide_drawer" />
+                                <img src="img/가구7.png" alt="toast_wide_drawer" />
                             </figure>
                             <div class="best-seller-furniture-name">
                                 <h6>TOAST WIDE DRAWER</h6>
@@ -186,7 +186,7 @@
                         </li>
                         <li class="carousel-item">
                             <figure class="best-seller-furniture">
-                                <img src="../img/가구3.png" alt="double_wood_shelf" />
+                                <img src="img/가구3.png" alt="double_wood_shelf" />
                             </figure>
                             <div class="best-seller-furniture-name">
                                 <h6>SIMPLE DOUBLE SHELF</h6>
@@ -195,7 +195,7 @@
                         </li>
                         <li class="carousel-item">
                             <figure class="best-seller-furniture">
-                                <img src="../img/가구4.png" alt="brunch_wood_chair" />
+                                <img src="img/가구4.png" alt="brunch_wood_chair" />
                             </figure>
                             <div class="best-seller-furniture-name">
                                 <h6>BRUNCH WOOD CHAIR</h6>
@@ -204,7 +204,7 @@
                         </li>
                         <li class="carousel-item">
                             <figure class="best-seller-furniture">
-                                <img src="../img/가구5.png" alt="book_high_shelf" />
+                                <img src="img/가구5.png" alt="book_high_shelf" />
                             </figure>
                             <div class="best-seller-furniture-name">
                                 <h6>BOOK HIGH SHELF</h6>
@@ -213,7 +213,7 @@
                         </li>
                         <li class="carousel-item">
                             <figure class="best-seller-furniture">
-                                <img src="../img/가구6.png" alt="simple_table" />
+                                <img src="img/가구6.png" alt="simple_table" />
                             </figure>
                             <div class="best-seller-furniture-name">
                                 <h6>SIMPLE TABLE</h6>
@@ -241,7 +241,7 @@
                     </div>
                     <div class="explain-showroom fadein fade to-left">
                         <figure>
-                            <img src="../img/밤가시.png" alt="밤가시점쇼룸" />
+                            <img src="img/밤가시.png" alt="밤가시점쇼룸" />
                         </figure>
                         <div class="showroom-bamgasi-inform">
                             <div class="showroom-address bamgasi">
@@ -271,7 +271,7 @@
                             </div>
                         </div>
                         <figure>
-                            <img src="../img/가라지.png" alt="가라지점쇼룸" />
+                            <img src="img/가라지.png" alt="가라지점쇼룸" />
                         </figure>
                     </div>
                 </div>
@@ -289,7 +289,7 @@
                                 <div class="with-furniture-icons">
                                     <a href="#">
                                         <img
-                                            src="../img/review-icon.png"
+                                            src="img/review-icon.png"
                                             alt="review-icon"
                                         />
                                         <h5>REVIEW</h5>
@@ -304,7 +304,7 @@
                                 <div class="with-furniture-icons">
                                     <a href="#">
                                         <img
-                                            src="../img/event-icon.png"
+                                            src="img/event-icon.png"
                                             alt="event-icon"
                                         />
                                         <h5>EVENT</h5>
@@ -319,7 +319,7 @@
                                 <div class="with-furniture-icons">
                                     <a href="#">
                                         <img
-                                            src="../img/문의-icon.png"
+                                            src="img/문의-icon.png"
                                             alt="customer-center-icon"
                                         />
                                         <h5>CUSTOMER CENTER</h5>
@@ -334,7 +334,7 @@
                                 <div class="with-furniture-icons">
                                     <a href="#">
                                         <img
-                                            src="../img/qna-icon.png"
+                                            src="img/qna-icon.png"
                                             alt="qna-icon"
                                         />
                                         <h5>Q&A</h5>
@@ -355,7 +355,7 @@
                     <div class="footer-main">
                         <a class="footer-logo" href="#">
                             <img
-                                src="../img/퍼니처랩로고.png"
+                                src="img/퍼니처랩로고.png"
                                 alt="furniturelab-logo"
                             />
                         </a>
@@ -400,7 +400,7 @@
                                 />
                                 <a class="footer-icons" href="#">
                                     <img
-                                        src="../img/search-icon.png"
+                                        src="img/search-icon.png"
                                         alt="search-icon"
                                     />
                                 </a>
