모바일 모달창 두번누르는거 고침

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <a href="#"> WITH FURNITURE LAB </a>
                         </li>
                         <li>
-                            <a href="#"> COSTOMER CENTER </a>
+                            <a href="#"> CUSTOMER CENTER </a>
                         </li>
                         <hr>
                         <li class="mobile-login">
