--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="css/스크롤페이드인.css" />
-        <link rel="stylesheet" href="css/캐러셀.css" />
+        <link rel="stylesheet" href="css/scroll_fade_in.css" />
+        <link rel="stylesheet" href="css/carousel.css" />
         <link rel="stylesheet" href="css/media.css" />
     </head>
 
@@ -428,12 +428,12 @@
             </footer>
         </main>
 
-        <script src="JS/캐러셀.js"></script>
+        <script src="JS/carousel.js"></script>
         <script>
             const mySlider = document.querySelector(".my-slider");
             createSlider(mySlider, 4, 10, 100, true);
         </script>
-        <script src="JS/페이드인.js"></script>
+        <script src="JS/scroll_fade_in.js"></script>
         <script src="JS/media_header.js"></script>
     </body>
 </html>
