--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="css/scroll_fade_in.css" />
         <link rel="stylesheet" href="css/carousel.css" />
         <link rel="stylesheet" href="css/media.css" />
+        <link rel="stylesheet" href="css/slider.css">
     </head>
 
     <body>
@@ -149,9 +150,17 @@
                                 </p>
                             </div>
                         </div>
-                        <figure>
-                            <img src="img/최종about.png" alt="자연이미지" />
-                        </figure>
+                        <!-- <div class="brand-img fade-slides content fade to-left">
+                            <img class="slide showing" src="img/aboutus.jpg" alt="">
+                            <img class="slide" src="img/aboutus2.png" alt="">
+                            <img class="slide" src="img/aboutus3.png" alt="">
+                        </div> -->
+                        <div class="brand-img fade-slides content">
+                            <img class="slide showing" src="img/aboutus4.png" alt="">
+                            <img class="slide" src="img/aboutus2.png">
+                            <img class="slide" src="img/aboutus3.png" alt="">
+                            
+                        </div>
                     </div>
                 </div>
             </section>
@@ -435,5 +444,6 @@
         </script>
         <script src="JS/scroll_fade_in.js"></script>
         <script src="JS/media_header.js"></script>
+        <script src="JS/slider.js"></script>
     </body>
 </html>
