--- a/index.html
+++ b/index.html
@@ -150,17 +150,13 @@
                                 </p>
                             </div>
                         </div>
-                        <!-- <div class="brand-img fade-slides content fade to-left">
-                            <img class="slide showing" src="img/aboutus.jpg" alt="">
+                        <div class="fade-slides content fade to-left">
+                            <img class="slide showing" src="img/aboutus.png" alt="">
                             <img class="slide" src="img/aboutus2.png" alt="">
-                            <img class="slide" src="img/aboutus3.png" alt="">
-                        </div> -->
-                        <div class="brand-img fade-slides content">
-                            <img class="slide showing" src="img/aboutus4.png" alt="">
-                            <img class="slide" src="img/aboutus2.png">
-                            <img class="slide" src="img/aboutus3.png" alt="">
-                            
-                        </div>
+                            <img class="slide" src="./img/aboutus3.png" alt="">
+                            <img class="slide" src="./img/aboutus4.png" alt="">
+                            <!-- 사진 3개 페이드인으로 들어갈거 -->
+                          </div>
                     </div>
                 </div>
             </section>
@@ -445,5 +441,6 @@
         <script src="JS/scroll_fade_in.js"></script>
         <script src="JS/media_header.js"></script>
         <script src="JS/slider.js"></script>
+        <script src="JS/fade-slides.js"></script>
     </body>
 </html>
